syntax = "proto3";

package auction;

option go_package = "github.com/Xerzes01/Auction/grpc";

service AuctionService {
  rpc Bid(BidRequest) returns (BidResponse);
  rpc Result(ResultRequest) returns (ResultResponse);

  rpc ReplicateState(ReplicationMsg) returns (Ack);
}

message BidRequest {
  int32 amount = 1;
  string bidderId = 2;
}

message BidResponse {
  enum Status {
    FAIL = 0;
    SUCCESS = 1;
    EXCEPTION = 2;
  }
  Status status = 1;
  int32 highestBid = 2;
}

message ResultRequest {}

message ResultResponse {
  bool auctionOver = 1;
  int32 highestBid = 2;
  string winner = 3;
}

message ReplicationMsg {
  int32 highestBid = 1;
  string highestBidder = 2;
  int64 timestamp = 3;
}

message Ack {
  bool ok = 1;
}
